<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_Camera_IN" Id="{a2108ab1-1035-40a2-a8bb-1e2960d3027d}">
    <Declaration><![CDATA[TYPE ST_Camera_IN :
STRUCT
	nCAMType						:UINT;
	nResponse						:UINT;
	nLifeSignal						:UINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>